--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
   "settings": { "react": { "version": "18.2" } },
   "plugins": ["react-refresh"],
   "rules": {
-    "react/jsx-no-target-blank": "off"
+    "react/jsx-no-target-blank": "off",
+    "react/prop-types": "off"
   }
 }
